<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewMain01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/welcome_message" />

    <TextView
        android:id="@+id/textViewMain02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMain01"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_main_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openActualStateActivity"
            android:text="@string/bouton_main_01" />

        <Button
            android:id="@+id/button_main_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openServiceActivity"
            android:text="@string/bouton_main_02" />

        <Button
            android:id="@+id/button_main_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openHistoricActivity"
            android:text="@string/bouton_main_03" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewMain03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/welcome_credit" />

</RelativeLayout>